Sat Jan 30 15:49:07 CET 2016
	Fix running select() with empty fdsets on W32. -EG

Mon Jan 25 13:45:50 CET 2016
	Added check test for triggering select() on
	listen socket. -EG

Thu Jan 21 19:35:18 CET 2016
	Fixed old bug with making sockets non-blocking on
	various platforms so now sockets are really
	non-blocking on all supported platforms.
	Reworked and fixed code for using SOCK_CLOEXEC,
	SOCK_NONBLOCK and EPOLL_CLOEXEC resulting in
	fewer used system calls. -EG

Tue Jan 19 20:59:59 CET 2016
	Cleaned up and optimized with minor fixes code for
	making sockets non-blocking non-inheritable. -EG

Tue Jan 19 11:14:18 CET 2016
	Removed workaround for Cygwin non-blocking sockets:
	handling non-blocking sockets were fixed in Cygwin
	and libmicrohttpd how uses non-blocking sockets on
	all platforms. -EG

Mon Jan 18 23:54:45 CET 2016
	Cleaned up examples to avoid giving oversimplified code
	that may lead to complications if adopted naively. -CG

Sun Jan 17 11:18:55 CET 2016
	Do no refuse to send response if sendfile() failed with
	EINVAL (common error for files located on SMB/CIF). -EG

Sat Jan 16 19:14:39 CET 2016
	Use US-ASCII only (instead of user locale settings) when
	performing caseless string comparison as required by
	standard. -EG

Tue Jan 12 16:10:09 CET 2016
	Fixed declaraion of MHD_get_reason_phrase_for(). -EG

Mon Jan 11 19:58:50 CET 2016
	Configure.ac small fixes and refactoring. -EG

Fri Dec 18 15:54:50 CET 2015
	Releasing libmicrohttpd 0.9.48. -CG

Tue Dec  15 18:35:55 CET 2015
	Improved compatibility with VS2010 and other older
	compilers. -EG

Tue Dec  8 21:48:44 CET 2015
	Default backlog size for listen socket was changed from
	32 to SOMAXCONN, added new option MHD_OPTION_LISTEN_BACKLOG_SIZE
	to override default backlog size.
	If not all connections can be handled by MHD_select() than
	at least some of connections will be processed instead of
	failing without any processing.
	Fixed redefenition of FD_SETSIZE on W32 so select() will